--- a/hello-world.yaml
+++ b/hello-world.yaml
@@ -1,8 +1,8 @@
 # Form : https://codingbee.net/ansible/ansible-a-hello-world-playbook
 - name: This is a hello-world example
-  hosts: ansibleclient01.local
+  hosts: localhost
   tasks:
     - name: Create a file called '/tmp/testfile.txt' with the content 'hello world'.
       copy:
-        content: hello worldn
+        content: hello world
         dest: /tmp/testfile.txt
